Доработал сборку библиотеки

--- a/package.json
+++ b/package.json
@@ -20,11 +20,19 @@
 	"bugs": {
 		"url": "https://github.com/ninelines-team/ninelines-ua-parser/issues"
 	},
-	"main": "src/index.js",
+	"main": "dist/ninelines-ua-parser.umd.js",
+	"jsnext:main": "dist/ninelines-ua-parser.es.js",
 	"scripts": {
+		"js": "rollup --config",
+		"build": "npm run js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"babel-core": "^6.26.0",
+		"babel-plugin-external-helpers": "^6.22.0",
+		"babel-preset-env": "^1.6.1",
+		"rollup": "^0.56.2",
+		"rollup-plugin-babel": "^3.0.3",
 		"ua-parser-js": "^0.7.17"
 	}
 }
