--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
-		"babel-core": "^6.26.0",
-		"babel-plugin-external-helpers": "^6.22.0",
-		"babel-preset-env": "^1.6.1",
-		"rollup": "^0.56.5",
-		"rollup-plugin-babel": "^3.0.3",
-		"ua-parser-js": "^0.7.17"
+		"babel-core": "6.26.0",
+		"babel-plugin-external-helpers": "6.22.0",
+		"babel-preset-env": "1.6.1",
+		"rollup": "0.56.5",
+		"rollup-plugin-babel": "3.0.3",
+		"ua-parser-js": "0.7.17"
 	}
 }
