Заменил rollup на webpack, дополнил документацию

--- a/package.json
+++ b/package.json
@@ -20,19 +20,17 @@
 	"bugs": {
 		"url": "https://github.com/ninelines-team/ninelines-ua-parser/issues"
 	},
-	"main": "dist/ninelines-ua-parser.umd.js",
-	"jsnext:main": "dist/ninelines-ua-parser.es.js",
+	"main": "dist/ninelines-ua-parser.js",
 	"scripts": {
-		"js": "rollup --config",
-		"build": "npm run js",
+		"build": "webpack --mode production",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
 		"babel-core": "6.26.0",
-		"babel-plugin-external-helpers": "6.22.0",
+		"babel-loader": "7.1.4",
 		"babel-preset-env": "1.6.1",
-		"rollup": "0.56.5",
-		"rollup-plugin-babel": "3.0.3",
-		"ua-parser-js": "0.7.17"
+		"ua-parser-js": "0.7.17",
+		"webpack": "4.4.1",
+		"webpack-cli": "2.0.13"
 	}
 }
