--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
-		"babel-core": "6.26.3",
-		"babel-loader": "7.1.5",
-		"babel-preset-env": "1.7.0",
+		"@babel/core": "^7.1.0",
+		"@babel/preset-env": "^7.1.0",
+		"babel-loader": "8.0.2",
 		"ua-parser-js": "0.7.18",
-		"webpack": "4.16.4",
+		"webpack": "4.19.0",
 		"webpack-cli": "3.1.0"
 	}
 }
