--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
 	"dependencies": {
 		"@babel/core": "^7.1.0",
 		"@babel/preset-env": "^7.1.0",
-		"babel-loader": "8.0.2",
-		"ua-parser-js": "0.7.18",
-		"webpack": "4.19.0",
-		"webpack-cli": "3.1.0"
+		"babel-loader": "^8.0.2",
+		"ua-parser-js": "^0.7.18",
+		"webpack": "^4.19.0",
+		"webpack-cli": "^3.1.0"
 	}
 }
