--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
 		"build": "webpack --mode production",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"dependencies": {
+	"devDependencies": {
 		"@babel/core": "^7.1.0",
 		"@babel/preset-env": "^7.1.0",
 		"babel-loader": "^8.0.2",
-		"ua-parser-js": "^0.7.18",
 		"webpack": "^4.19.0",
 		"webpack-cli": "^3.1.0"
+	},
+	"dependencies": {
+		"ua-parser-js": "^0.7.18"
 	}
 }
